--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@elysiajs/eden": "^1.4.5",
     "@ncaliber-co/redis-realtime": "^1.0.2",
     "@tanstack/react-query": "^5.90.12",
+    "date-fns": "^4.1.0",
     "elysia": "^1.4.19",
     "lucide-react": "^0.561.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.10",
+    "next": "^16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "redis": "^5.10.0",
